button spacing inconsistency fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1243,6 +1243,7 @@ textarea {
     		font-weight: @font-swatch3-font-weight;
     		line-height: @font-swatch3-line-height;
     		margin: 16px 0 8px;
+    		font-size: 0px;
     	}
     	fieldset {
     		margin: 0 0 20px 0;
@@ -1313,7 +1314,7 @@ textarea {
             color: @font-swatch7-color;
             letter-spacing: inherit;
             padding: 5px 10px;
-            margin: 1em 0 0 3px;
+            margin: 1em 0;
             text-decoration: none;
             position: relative;
             width: 85px;
